--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Cache Bank Landing Page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -12,25 +24,126 @@
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
 
-<body class="null">
-    <div class="container flex flex-col mx-auto">
+<body class="bg-gray-100">
+    <!-- COMPONENT 1 -->
+    <div class="mx-auto bg-white">
         <!-- Main container with navigation and header content -->
+        <div class="relative flex flex-wrap items-center justify-between w-full ">
+            <div class="px-4">
+                <img class="h-8" src="assets/component-1/navigation/cache-bank-logo.png" alt="Cache bank logo">
+            </div>
+            <div class="hidden md:flex items-center justify-between text-black gap-12">
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="product"
+                    >Product
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="features"
+                    >Features
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="getStarted"
+                    >Get started
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="conctact"
+                    >Contact
+                </a>
+            </div>
+            <div class="hidden gap-8 p-4 items-center md:flex">
+                <button type="button" class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log in</button>
+                <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl">Sign Up</button>
+            </div>
+            <button type="button" class="p-4 md:hidden" id="mobile-menu-toggle">
+                <!-- <img src="assets/component-1/navigation/hamburger.svg" alt="hamburger button"/> -->
+                <svg
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    class="h-6 w-6"
+                    fill="none"
+                    >
+                    <g clip-path="url(#clip0_429_11066)">
+                    <path
+                        d="M3 6.00092H21M3 12.0009H21M3 18.0009H21"
+                        stroke="#292929"
+                        stroke-width="2.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    />
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_429_11066">
+                        <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                        transform="translate(0 0.000915527)"
+                        />
+                    </clipPath>
+                    </defs>
+                </svg>
+            </button>
+            <div class="absolute hidden md:hidden flex flex-col items-start justify-center w-full gap-3 overflow-hidden max-h-screen top-full px-4 py-8 shadow-main bg-white" id="mobile-menu">
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="product"
+                    >Product
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="features"
+                    >Features
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="getStarted"
+                    >Get started
+                </a>
+                <a 
+                    class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+                    href="conctact"
+                    >Contact
+                </a>
+                <button type="button" class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">Log in</button>
+                <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl">Sign Up</button>
+            </div>
+        </div>
     </div>
-    <div class="w-full">
+    <!-- COMPONENT 2 -->
+    <section class="w-full grid grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14" id="product">
         <!-- Wide full-width container for additional content -->
-    </div>
-    <div class="container mx-auto">
+        <div class="flex flex-col justify-center col-spam-1 text-center lg:text-start">
+            <h1 class=""></h1>
+        </div>
+
+        <div>
+
+        </div>
+    </section>
+    <!-- COMPONENT 3 -->
+    <div class="container mx-auto" id="features">
         <!-- Centered container for more content -->
     </div>
+    <!-- COMPONENT 4 -->
     <div class="w-full">
         <!-- Wide full-width container for additional content -->
     </div>
-    <div class="w-full">
+    <!-- COMPONENT 5 -->
+    <div class="w-full" id="getStarted">
         <!-- Wide full-width container for additional content -->
     </div>
+    <!-- FOOTER -->
     <div class="w-full bg-green-500">
         <!-- Full-width footer container with green background -->
     </div>
+    <script>
+        document.getElementById("mobile-menu-toggle").addEventListener("click", function() {document.getElementById("mobile-menu").classList.toggle("hidden")})
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
