--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-100 ">
     <!-- COMPONENT 1 -->
-    <div class="mx-auto bg-white">
+    <div class="container mx-auto bg-white">
         <!-- Main container with navigation and header content -->
         <div class="relative flex flex-wrap items-center justify-between w-full ">
             <div class="px-4">
@@ -59,7 +59,7 @@
                 <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl">Sign Up</button>
             </div>
             <button type="button" class="p-4 md:hidden" id="mobile-menu-toggle">
-                <!-- <img src="assets/component-1/navigation/hamburger.svg" alt="hamburger button"/> -->
+                <!-- <img src="assets/component-1/navigation/hamburger.svg" alt="hamburger button"> -->
                 <svg
                     fill="none"
                     viewBox="0 0 24 24"
@@ -115,19 +115,156 @@
         </div>
     </div>
     <!-- COMPONENT 2 -->
-    <section class="w-full grid grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14" id="product">
+     <!-- HERO -->
+    <section class="container w-full grid grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14" id="product">
         <!-- Wide full-width container for additional content -->
         <div class="flex flex-col justify-center col-spam-1 text-center lg:text-start">
-            <h1 class=""></h1>
+            <h1 class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl">
+                The Clever Place to Keep Your Cache
+            </h1>
+            <p class="mb-6 text-base font-normal leading-7 lg:w-3/4 text-grey-900 ">
+                Cache Bank is designed exculsively for software developers. we understand 
+                your financial needs are asa unique as the code you write.Our services offer 
+                cutting-edge financial solutions that help you take care of your cash.
+            </p>
+            <div class="flex flex-col items-center gap-4 lg:flex-row">
+                <button class="flex items center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">
+                    Join Cache Now
+                </button>
+                <button class="flex items center py-4 text-sm font-bold text-white px-7 focus:ring-4 focus:ring-purple-blue-100 transition duration-300 rounded-xl bg-green-500 hover:bg-pink-500">
+                    Join Our Discord Server
+                </button>
+            </div>
         </div>
 
-        <div>
-
+        <div class="items-center justify-end hidden coll-span md:flex">
+                <img src="assets/component-2/hero-image.png" alt="drawing of a woman infront of a computer">
         </div>
     </section>
+
+     <!-- ENDORSEMENTS -->
+    <Section class="container w-full">
+        <div class="container flex flex-col items-center gap-8 mx-auto my-40">
+            <p class="text-center text-dark-grey-600 font-bold mb-10 text-2xl">
+                Endorsed by global companies like
+            </p>
+            <div class="flex flex-wrap items-center justify-center w-full gap-4 lg:gap-0 lg:flex-nowrap lg:justify-between">
+                <img src="assets/component-2/logos/nike-logo.svg" alt="Nike logo">
+                <img src="assets/component-2/logos/amazon-logo.svg" alt="amazon logo">
+                <img src="assets/component-2/logos/minecraft-logo.svg" alt="Minecracft logo">
+                <img src="assets/component-2/logos/steam-logo.svg" alt="steam-logo">
+                <img src="assets/component-2/logos/notion-logo.svg" alt="notion-logo">
+            </div>
+        </div>
+     </Section>
+
     <!-- COMPONENT 3 -->
-    <div class="container mx-auto" id="features">
-        <!-- Centered container for more content -->
+     <!-- FEATURES-->
+    <div class="container mx-auto py-10 flex flex-col items-center justify-center" id="features">
+        <!-- header section -->
+         <div class="flex flex-col items-center justify-center mt-12">
+            <h1 class="mb-4 text-3xl lg:text-4xl font-extrabold text-center text-dark-grey-900">
+                Elevate Your Banking with Cache
+            </h1>
+            <p class="text-lg text-center lg:w-7/12 text-grey-700">
+                We merge cutting-edge banking with a deep understanding of software developers needs.
+                Experience tailored financial solutions, advanced security, and tec-focused support designed just for you.
+            </p>
+         </div>
+         <!-- End of Header Section-->
+
+         <!-- Cards Section -->
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-20">
+            <!-- Card 1 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img 
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-green-500" 
+                        src="assets/component-3/feature-icons/developer-focused-accounts.svg"  
+                        alt=""
+                    >
+                    </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">
+                        Developer-Focused Account Plans
+                    </h4>
+                    <p class="font-medium text-grey-700">
+                        Tailored accounts offering benefits like high-yield savings and exclusive investment options, designed specifically for software developers' financial needs and career growth.
+                    </p>
+                </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img 
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-green-500"
+                        src="assets/component-3/feature-icons/advanced-online-banking.svg" 
+                        alt=""
+                    >
+                </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">Advanced Online Banking Platform</h4>
+                    <p class="font-medium text-grey-700">A cutting-edge, intuitive online banking interface with features like API intergrations, allowing developers to seamlesly manage finances alongside their coding projects.</p>
+                </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img 
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-green-500"
+                        src="assets/component-3/feature-icons/tech-savvy-customer.svg" 
+                        alt=""
+                    >
+                </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">Tech-Savvy Customer Support</h4>
+                    <p class="font-medium text-grey-700">Expert support team with a deep understanfing of the tech industry, providing relevant financial advice and assistance specifically for software developers.</p>
+                </div>
+            </div>
+            <!-- Card 4 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img 
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-pink-500"
+                        src="assets/component-3/feature-icons/high-level-security.svg" 
+                        alt=""
+                    >
+                </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">High-Level Security Features</h4>
+                    <p class="font-medium text-grey-700">State-of-the-art cybersecurity measures, including multi-factor authentication and encryption, ensuring the safety of digital assets, which is crucial for tech professionals.</p>
+                </div>
+            </div>
+            <!-- Card 5 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-pink-500" 
+                        src="assets/component-3/feature-icons/innovative-financial-tools.svg" 
+                        alt=""
+                    >
+                </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">Innovative Financial Tools</h4>
+                    <p class="font-medium text-grey-700">Access to unique financial tools and resources, like project fundinf accounts and tech startuo investment opportunities, catering to the enterpreneurial spirit of developers.</p>
+                </div>
+            </div>
+            <!-- Card 6 -->
+            <div class="flex flex-col items-center gap-5 px-5 rounded-3xl shadow-main hover:bg-green-500 transition duration-300">
+                <div>
+                    <img 
+                        class="flex items-center justify-center w-16 h-16 rounded-2xl bg-pink-500"
+                        src="assets/component-3/feature-icons/community-networking-opps.svg" 
+                        alt=""
+                    >
+                </div>
+                <div class="flex flex-col gap-2 text-center px-5">
+                    <h4 class="text-2xl font-extrabold text-dark-grey-900">Community and Networking opportunities</h4>
+                    <p class="font-medium text-grey-700">Excluszive access to tech events, webinars and a community platform for networking, collaboration and sharing insights within the software development industry.</p>
+                </div>
+            </div>
+         </div>
+         <!-- End of Cards Section -->
     </div>
     <!-- COMPONENT 4 -->
     <div class="w-full">
