--- a/index.html
+++ b/index.html
@@ -267,18 +267,140 @@
          <!-- End of Cards Section -->
     </div>
     <!-- COMPONENT 4 -->
+     <!-- STATS -->
     <div class="w-full">
-        <!-- Wide full-width container for additional content -->
+        <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+            <div class="grid w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-8">
+                <!-- Stats Blocks -->
+                <div class="flex flex-col items center">
+                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900">
+                        <span id="countto1" countto="250">250</span>+
+                    </h3>
+                    <p class="text-base font-medium leading-7 text-center text-dark-grey-600">
+                        Hours Saved Sitting in te Bank
+                    </p>
+                </div>
+                <div class="flex flex-col items center">
+                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900">
+                        <span id="countto2" countto="12">12</span>m
+                    </h3>
+                    <p class="text-base font-medium leading-7 text-center text-dark-grey-600">
+                        Cache Saved
+                    </p>
+                </div>
+                <div class="flex flex-col items center">
+                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900">
+                        <span id="countto3" countto="2600" data-decimal="1">2600</span>k+
+                    </h3>
+                    <p class="text-base font-medium leading-7 text-center text-dark-grey-600">
+                        Global Partners
+                    </p>
+                </div>
+                <div class="flex flex-col items center">
+                    <h3 class="text-5xl font-extrabold leading-tight text-center text-dark-grey-900">
+                        <span id="countto4" countto="18000">18000</span>+
+                    </h3>
+                    <p class="text-base font-medium leading-7 text-center text-dark-grey-600">
+                        Happy Developers
+                    </p>
+                </div>
+            </div>
+        </div>
+        
     </div>
     <!-- COMPONENT 5 -->
+    <!--Get Started -->
     <div class="w-full" id="getStarted">
+        <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+            <div class="grid w-full grid-cols-1 gap-32 lg:grid-cols-2">
+                <div class="bg-cover bg-center hidden lg:block rounded-3xl" style="background-image: url(assets/component-4/getting-started.png);">
+                </div>
+                <div class="flex flex-col gap-16">
+                    <div class="flex flex-col gap-2 text-center md:text-start">
+                        <h2 class="text-3xl font-extrabold md:text4xl lg:text-5xl text-dark-grey-900">How Cache Works</h2>
+                        <p class="text-base font-medium leading-7 text-dark-grey-600">
+                            <span style="color: rgb(55, 65, 81); font-family:söhne, ul-sans-serif, system-ul, -apple-system;">
+                                Cache Bank Simplifies sign-up with a user-friendly website, streamlined account options, and an efficient 
+                                verification process, making banking accessible and hassle-free for developers.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10">
+                        <div class="flex flex-col items-start gap-1">
+                            <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                                <span class="text-base font bold leading-7 text-white">1</span>
+                            </div>
+                            <h3 class="text-base font-bold leading-tight text-dark-grey-900">
+                                <span style="border-color: rgb(217,217,227); border-image: initial; --tw-border-spacing-x: 0; --tw-border-spacing-y: 0;">
+                                    Visit Cache Bank Website
+                                </span>
+                            </h3>
+                            <p class="text-base font-medium leading-7 text dark-grey-600">
+                                <span>
+                                    Go to Cache Bank, Click "Sign Up" or "Open and Account"
+                                </span style="color: rgb(55, 65, 81); font-family:söhne, ul-sans-serif, system-ul, -apple-system">
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-start gap-1">
+                            <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                                <span class="text-base font bold leading-7 text-white">2</span>
+                            </div>
+                            <h3 class="text-base font-bold leading-tight text-dark-grey-900">
+                                <span style="border-color: rgb(217,217,227); border-image: initial; --tw-border-spacing-x: 0; --tw-border-spacing-y: 0;">
+                                    Choose Account TYpe
+                                </span>
+                            </h3>
+                            <p class="text-base font-medium leading-7 text dark-grey-600">
+                                <span>
+                                    Select from checking, savings, or developer specific accounts.
+                                </span style="color: rgb(55, 65, 81); font-family:söhne, ul-sans-serif, system-ul, -apple-system">
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-start gap-1">
+                            <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500">
+                                <span class="text-base font bold leading-7 text-white">3</span>
+                            </div>
+                            <h3 class="text-base font-bold leading-tight text-dark-grey-900">
+                                <span style="border-color: rgb(217,217,227); border-image: initial; --tw-border-spacing-x: 0; --tw-border-spacing-y: 0;">
+                                    Provide Personal Information
+                                </span>
+                            </h3>
+                            <p class="text-base font-medium leading-7 text dark-grey-600">
+                                <span>
+                                    Complete the form with your details and identification for security.
+                                </span style="color: rgb(55, 65, 81); font-family:söhne, ul-sans-serif, system-ul, -apple-system">
+                            </p>
+                        </div>
+                        <div class="flex flex-col items-start gap-1">
+                            <div class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500">
+                                <span class="text-base font bold leading-7 text-white">4</span>
+                            </div>
+                            <h3 class="text-base font-bold leading-tight text-dark-grey-900">
+                                <span style="border-color: rgb(217,217,227); border-image: initial; --tw-border-spacing-x: 0; --tw-border-spacing-y: 0;">
+                                    Verify and Submit
+                                </span>
+                            </h3>
+                            <p class="text-base font-medium leading-7 text dark-grey-600">
+                                <span>
+                                    Check your information, agree to terms, and submit for account approval.
+                                </span style="color: rgb(55, 65, 81); font-family:söhne, ul-sans-serif, system-ul, -apple-system">
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Wide full-width container for additional content -->
     </div>
+    
+    <!-- Contact -->
+
+
     <!-- FOOTER -->
     <div class="w-full bg-green-500">
         <!-- Full-width footer container with green background -->
     </div>
-    <script>
+    <script> 
         document.getElementById("mobile-menu-toggle").addEventListener("click", function() {document.getElementById("mobile-menu").classList.toggle("hidden")})
     </script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
